--- a/src/collective/multilingualtools/static/linguatools.css
+++ b/src/collective/multilingualtools/static/linguatools.css
@@ -2,7 +2,7 @@
 #content legend.trigger {
 	padding: 0 0 0 12px;
 	margin: 0 0 5px 0;
-	background: url(++resource++slc.linguatools.static/arrow.png) no-repeat 3px 7px;
+	background: url(++resource++collective.multilingualtools.static/arrow.png) no-repeat 3px 7px;
 	height: 20px;
 	line-height: 20px;
 	cursor: pointer;
@@ -11,7 +11,7 @@
 }
 
 #content legend.active {
-  background: url(++resource++slc.linguatools.static/arrow-down.png) no-repeat 2px 9px;
+  background: url(++resource++collective.multilingualtools.static/arrow-down.png) no-repeat 2px 9px;
   } 
   
 .toggle_container {
